--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -1,8 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",                
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -20,7 +19,8 @@
     "pg": "^8.16.0"
   },
   "devDependencies": {
-    "@types/node": "^22.15.21",
+    "@types/node": "^22.15.31",
     "nodemon": "^3.1.10"
-  }
+  },
+  "description": ""
 }
